--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,7 +32,7 @@ html(lang='en')
                   li: a(href='/contact') Contact
 
     // Main body
-    .continer
+    .container
       block content
 
     footer
