--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,5 +40,5 @@ html(lang='en')
         .container
 
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js')
-    script(src='/js/bootstrap.min.js')
+    script(src='/js/bootstrap.js')
     block scripts
