--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,8 @@
 extends layout
 block content
   h1 Open Access Button
+
+  p
+    a(class="btn", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ locals.domain }/js/bookmarklet.js');")
+      i(class='icon-bookmark')
+    |Drag the button to your bookmark bar.
