Hooray! Sort out domains problems!

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,6 @@ block content
   h1 Open Access Button
 
   p
-    a(class="btn", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ locals.domain }/js/bookmarklet.js');")
+    a(class="btn", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ vars.domain }/js/bookmarklet.js');")
       i(class='icon-bookmark')
     |Drag the button to your bookmark bar.
