Change link names

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,9 +27,10 @@ html(lang='en')
               .nav-collapse.collapse
                 ul.nav
                   li.active: a(href='/') Home
-                  li: a(href='/add') Add
                   li: a(href='/about') About
-                  li: a(href='/contact') Contact
+                  li: a(href='/stories') Stories
+                  li: a(href='/map') Map
+                  li: a(href='/download.json') Download
 
     // Main body
     .container
