--- a/views/Event/map.jade
+++ b/views/Event/map.jade
@@ -1,6 +1,21 @@
 extends ../layout
 block content
   h1= count
+    small  Scholarly pursuits denied
   each event in events
-    p.
-      IMPLEMENTING THE MAP
+    span= event.coords
+  div#map-canvas
+
+block scripts
+  script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false')
+  script.
+    var map;
+    function initialise() {
+      var mapOptions = {
+        zoom: 8,
+        center: new google.maps.LatLng(-34.397, 150.644),
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+      map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+    }
+    google.maps.event.addDomListener(window, 'load', initialise);
