--- a/views/Event/map.jade
+++ b/views/Event/map.jade
@@ -10,7 +10,13 @@ block scripts
   script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false')
   script.
     var map;
-    var myLatlng = new google.maps.LatLng(51.496214,-0.145226);
+
+    for (var i = 0; i < events.length; i++) {
+      var loc = events[i];
+      var myLatlng = new google.maps.LatLng(loc.coords);
+      new google.maps.Marker({position: myLatlng, map: map, title: loc.story});
+    }
+
     function initialise() {
       var mapOptions = {
         zoom: 8,
@@ -18,6 +24,5 @@ block scripts
         mapTypeId: google.maps.MapTypeId.ROADMAP
       };
       map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-      var marker = new google.maps.Marker({position: myLatlng, map: map, title: 'Buckingham Palace'});
     }
     google.maps.event.addDomListener(window, 'load', initialise);
