--- a/views/Event/map.jade
+++ b/views/Event/map.jade
@@ -32,5 +32,14 @@ block scripts
       };
       map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
       addMarkers(map);
+      
+      var popup = new google.maps.InfoWindow({
+        content:'<p id="hook">Hello World!</p>'
+      });
+      
+      google.maps.event.addListener(marker, 'click', function() {
+        infowindow.open(map,marker);
+      });
     }
+    
     google.maps.event.addDomListener(window, 'load', initialise);
