Oops, wrong var name

--- a/views/Event/map.jade
+++ b/views/Event/map.jade
@@ -38,7 +38,7 @@ block scripts
       });
       
       google.maps.event.addListener(marker, 'click', function() {
-        infowindow.open(map,marker);
+        popup.open(map,marker);
       });
     }
     
