Use moment instead of plain JS Date

--- a/views/Event/list.jade
+++ b/views/Event/list.jade
@@ -5,5 +5,5 @@ block content
       h3= event.doi
       p= event.story
       small
-        em= event.accessed
+        em= event.accessed.calendar()
         span: #{event.profession} from #{event.location}
