Add a local version of jquery

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,6 +40,6 @@ html(lang='en')
       block footer
         .container
 
-    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js')
+    script(src='/js/jquery.min.js')
     script(src='/js/bootstrap.js')
     block scripts
