--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -5,21 +5,4 @@ block header
 block footer
 
 block scripts
-  script(type='text/javascript').
-    var accessed = document.getElementById('id_accessed');
-    if (accessed) accessed.value = new Date();
-
-    $(function() {
-      $('form').submit(function() {
-        base_url = 'http://maps.googleapis.com/maps/api/geocode/json?sensor=false&address=';
-        var location;
-        $.ajax({
-          url: base_url + encodeURIComponent($('input#id_location').val()),
-          async: false,
-          success: function(response) {
-            location = response.results[0].geometry.location;
-          }
-        });
-        $('<input>').attr({'type': 'hidden', 'name': 'coords', 'value': [location.lat, location.lng]}).appendTo('form');
-      });
-    });
+  script(src='/js/map.js')
