Hiding coordinates is a good idea (Fix for #1)

--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -17,7 +17,7 @@ block content
       label.control-label(for='id_location') Location
       .controls
         input#id_location.input-block-level(type='text', name='location', placeholder='London, United Kingdom', required)
-        input#id_coords(type='text', name='coords')
+        input#id_coords(type='hidden', name='coords')
 
     .control-group
       label.control-label(for='id_doi') DOI
