--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='description', content='Open Access Button')
     title= title
-    // link(rel='shortcut icon', type='image/x-icon', href='/img/favicon.ico')
+    link(rel='shortcut icon', type='image/x-icon', href='/img/favicon.ico')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/css/font-awesome.min.css')
