--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html(lang='en')
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-              a.brand(href='http://oabutton.wordpress.com') Open Access Button
+              a.brand(href='/') Open Access Button
               .nav-collapse.collapse
                 ul.nav
                   li.active: a(href='/') Home
