Don’t require a variable for the submit button.
65155d439 broke this

--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -40,7 +40,7 @@ block content
 
     .control-group
       .controls
-        button.btn.btn-primary= title
+        button.btn.btn-primary Open Access please!
 
 block header
 
