--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -6,12 +6,12 @@ block content
     .control-group
       label.control-label(for='id_name') Your name
       .controls
-        input#id_name.input-block-level(type='text', name='name', placeholder='John Doe')
+        input#id_name.input-block-level(type='text', name='name', placeholder='e.g. Dr John Doe')
 
     .control-group
         label.control-label(for='id_profession') Profession
         .controls
-          input#id_profession.input-block-level(type='text', name='profession', placeholder='Student')
+          input#id_profession.input-block-level(type='text', name='profession', placeholder='e.g. Doctor')
 
     .control-group
       label.control-label(for='id_location') Location
@@ -20,13 +20,7 @@ block content
         input#id_coords(type='hidden', name='coords')
 
     .control-group
-      label.control-label(for='id_doi') DOI
-      .controls
-        input#id_doi.input-block-level(type='text', name='doi', placeholder='doi')
-        p.help-text Document Object Identifier (DOI)
-
-    .control-group
-      label.control-label(for='id_url') URL
+      label.control-label(for='id_url') Article URL
       .controls
         if vars.url
           input#id_url.input-block-level(readonly='readonly', type='text', name='url', value='#{vars.url}')
@@ -34,9 +28,15 @@ block content
           input#id_url.input-block-level(type='text', name='url', placeholder='http://www.publisher.com/journal?id=XXXX')
 
     .control-group
-      label.control-label(for='id_story') Story
+      label.control-label(for='id_doi') DOI
       .controls
-        textarea#id_story.input-block-level(name='story', rows=4, placeholder='Your story')
+        input#id_doi.input-block-level(type='text', name='doi', placeholder='e.g. 10.1136/bmj.c7086')
+        p.help-text Document Object Identifier (DOI)
+
+    .control-group
+      label.control-label(for='id_story') Why do you need access?
+      .controls
+        textarea#id_story.input-block-level(name='story', rows=4, placeholder='e.g. I’m trying to save lives, dammit!')
 
     .control-group
       .controls
