Add some team members to the about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,33 +2,23 @@ extends layout
 block content
   h1 Open Access Button
 
-  .hero-unit
-    p.
-      If we want to bring about a more open community we’ll need more tools, more information and more engagement around the issue.
+  p A BMJ / Rewired State hackday hack
 
-    p
-      strong That’s where our idea comes in. 
-      |Imagine a browser-based tool which allowed you to track every time someone
-      |was denied access to a paper? Better yet, imagine if that tool gave you
-      |basic information about where in the world they were or their profession
-      |and why they were looking. Integrating this into one place would create a
-      |realtime, worldwide, interactive picture of the problem. The integration
-      |of social media would allow us to make this problem visible to the world.
-      |Lastly, imagine if the tool actually helped the person gain access to the
-      |paper they’d been denied access to in the first place. Incentivising use
-      |and opening the barriers to knowledge combined can make this really
-      |powerful.
+  h2 The team
 
-    p
-      |That’s what we’re imagining. We’re calling it the 
-      strong Open Access button
-      |. Every paywall met is an isolated incident; it’s time we capture those
-      |individual moments of injustice and frustration to turn them into positive
-      |change. We’ve figured out how all this and more can be done – If you’re a
-      |programmer, we’d love your help creating a basic prototype to prove this is
-      |a viable idea. After that our dreams include a having a slick website to
-      |provide a home for the button and an accompanying campaign. If you have
-      |anything you feel that can help us and you want to help create change to
-      |move towards a more open world join us by contacting 
-      a(href='mailto:oabutton@gmail.com') oabutton@gmail.com
-      |.
+  ul
+    li
+      |Joe
+      img(src='/img/joe.jpg')
+    li
+      |David
+      img(src='/img/david.jpg')
+    li
+      |Nick
+      img(src='https://secure.gravatar.com/avatar/9637895e310caf25237e89155157b2a7?s=200')
+    li
+      |Andy
+      img(src='https://secure.gravatar.com/avatar/bbb9eb1af3b427f8259df33f6e8844aa?s=200')
+    li
+      |Florian
+      img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
