--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -16,7 +16,7 @@ block content
     .control-group
       label.control-label(for='id_location') Location
       .controls
-        input#id_location.input-block-level(type='text', name='location', placeholder='London, United Kingdom', required)
+        input#id_location.input-block-level(type='text', name='location', placeholder='e.g. London, United Kingdom', required)
         input#id_coords(type='hidden', name='coords')
 
     .control-group
