--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,11 +29,11 @@ html(lang='en')
               a.brand(href='/') Open Access Button
               .nav-collapse.collapse
                 ul.nav
-                  li.active: a(href='/') Home
-                  li: a(href='/about') About
+                  li: a(href='/') Home
                   li: a(href='/stories') Stories
                   li: a(href='/map') Map
                   li: a(href='/download.json') Download
+                  li: a(href='/about') About
 
     // Main body
     .container
