Oops! Add valued team member Elliot!
:S sorry

--- a/views/about.jade
+++ b/views/about.jade
@@ -32,3 +32,8 @@ block content
         img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
         .caption
           h3 Florian
+    li.span2
+      .thumbnail
+        img(src='/img/elliot.jpg')
+        .caption
+          h3 Elliot
