--- a/views/about.jade
+++ b/views/about.jade
@@ -8,30 +8,40 @@ block content
 
   ul.thumbnails
     li.span2
-      .thumbnail
-        img(src='/img/joe.jpg')
-        .caption
-          h3 Joe
+      a(href="http://twitter.com/Mcarthur_Joe")
+        .thumbnail
+          img(src='/img/joe.jpg')
+          .caption
+            h3 Joe
+            p @Mcarthur_Joe
     li.span2
-      .thumbnail
-        img(src='/img/david.jpg')
-        .caption
-          h3 David
+      a(href="http://twitter.com/davidecarroll")
+        .thumbnail
+          img(src='/img/david.jpg')
+          .caption
+            h3 David
+            p @davidecarroll
     li.span2
-      .thumbnail
-        img(src='https://secure.gravatar.com/avatar/9637895e310caf25237e89155157b2a7?s=200')
-        .caption
-          h3 Nick
+      a(href="http://twitter.com/nicholascwng")
+        .thumbnail
+          img(src='https://secure.gravatar.com/avatar/9637895e310caf25237e89155157b2a7?s=200')
+          .caption
+            h3 Nick
+            p @nicholascwng
     li.span2
-      .thumbnail
-        img(src='https://secure.gravatar.com/avatar/bbb9eb1af3b427f8259df33f6e8844aa?s=200')
-        .caption
-          h3 Andy
+      a(href="http://twitter.com/andylolz")
+        .thumbnail
+          img(src='https://secure.gravatar.com/avatar/bbb9eb1af3b427f8259df33f6e8844aa?s=200')
+          .caption
+            h3 Andy
+            p @andylolz
     li.span2
-      .thumbnail
-        img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
-        .caption
-          h3 Florian
+      a(href="http://twitter.com/frathgeber")
+        .thumbnail
+          img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
+          .caption
+            h3 Florian
+            p @frathgeber
     li.span2
       .thumbnail
         img(src='/img/elliot.jpg')
