Add link to RWS hacks page

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,7 +2,7 @@ extends layout
 block content
   h1 Open Access Button
 
-  p A BMJ / Rewired State hackday hack
+  a(href="http://hacks.rewiredstate.org/events/bmj/open-access-button") A BMJ / Rewired State hackday hack
 
   h2 The team
 
