Minor template changes

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,8 +32,8 @@ html(lang='en')
                   li: a(href='/') Home
                   li: a(href='/stories') Stories
                   li: a(href='/map') Map
-                  li: a(href='/download.json') Download
                   li: a(href='/about') About
+                  li: a(href='/download.json') API
 
     // Main body
     .container
