--- a/views/index.jade
+++ b/views/index.jade
@@ -1,39 +1,171 @@
 extends layout
-block content
-  h1 Open Access Button
+block body
+  header.jumbotron.subhead
+    .container
+      h1 Open Access Button
 
-  .hero-unit
-    p.
-      If we want to bring about a more open community we’ll need more tools, more information and more engagement around the issue.
+  // Main body
+  .container
+    .row
+      .span2.bs-docs-sidebar
+        ul.nav.nav-list.bs-docs-sidenav(data-spy="affix", data-offset-top="180")
+          li
+            a(href='#the-project') The project
+          li
+            a(href='#map') Map
+          li
+            a(href='#get-it') Get it!
+          li
+            a(href='#about') About
+      .span10
+        section#the-project
+          .page-header
+            h1 The project
+          .hero-unit
+            p.
+              If we want to bring about a more open community we’ll need more tools, more information and more engagement around the issue.
 
-    p
-      strong That’s where our idea comes in. 
-      |Imagine a browser-based tool which allowed you to track every time someone
-      |was denied access to a paper? Better yet, imagine if that tool gave you
-      |basic information about where in the world they were or their profession
-      |and why they were looking. Integrating this into one place would create a
-      |realtime, worldwide, interactive picture of the problem. The integration
-      |of social media would allow us to make this problem visible to the world.
-      |Lastly, imagine if the tool actually helped the person gain access to the
-      |paper they’d been denied access to in the first place. Incentivising use
-      |and opening the barriers to knowledge combined can make this really
-      |powerful.
+            p
+              strong That’s where our idea comes in. 
+              |Imagine a browser-based tool which allowed you to track every time someone
+              |was denied access to a paper? Better yet, imagine if that tool gave you
+              |basic information about where in the world they were or their profession
+              |and why they were looking. Integrating this into one place would create a
+              |realtime, worldwide, interactive picture of the problem. The integration
+              |of social media would allow us to make this problem visible to the world.
+              |Lastly, imagine if the tool actually helped the person gain access to the
+              |paper they’d been denied access to in the first place. Incentivising use
+              |and opening the barriers to knowledge combined can make this really
+              |powerful.
 
-    p
-      |That’s what we’re imagining. We’re calling it the 
-      strong Open Access button
-      |. Every paywall met is an isolated incident; it’s time we capture those
-      |individual moments of injustice and frustration to turn them into positive
-      |change. We’ve figured out how all this and more can be done – If you’re a
-      |programmer, we’d love your help creating a basic prototype to prove this is
-      |a viable idea. After that our dreams include a having a slick website to
-      |provide a home for the button and an accompanying campaign. If you have
-      |anything you feel that can help us and you want to help create change to
-      |move towards a more open world join us by contacting 
-      a(href='mailto:oabutton@gmail.com') oabutton@gmail.com
-      |.
+            p
+              |That’s what we’re imagining. We’re calling it the 
+              strong Open Access button
+              |. Every paywall met is an isolated incident; it’s time we capture those
+              |individual moments of injustice and frustration to turn them into positive
+              |change. We’ve figured out how all this and more can be done – If you’re a
+              |programmer, we’d love your help creating a basic prototype to prove this is
+              |a viable idea. After that our dreams include a having a slick website to
+              |provide a home for the button and an accompanying campaign. If you have
+              |anything you feel that can help us and you want to help create change to
+              |move towards a more open world join us by contacting 
+              a(href='mailto:oabutton@gmail.com') oabutton@gmail.com
+              |.
 
-    h3 Ok Ace! Give me the bookmarklet!
-    p Drag this to your bookmark bar: 
-      a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ vars.domain }/js/bookmarklet.js');")
-        i(class='icon-bookmark')  Open Access Button
+        section#map
+          .page-header
+            h1= count
+              small  Scholarly pursuits denied
+          #map_canvas
+
+        section#get-it
+          .page-header
+            h1 Ok Ace! Give me the bookmarklet!
+          .hero-unit
+            p Drag this to your bookmark bar: 
+              a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ domain }/js/bookmarklet.js');")
+                i(class='icon-bookmark')
+                |Open Access Button
+
+        section#about
+          .page-header
+            h1 About
+          a(href="http://hacks.rewiredstate.org/events/bmj/open-access-button") A BMJ / Rewired State hackday hack
+
+          h2 The team
+
+          ul.thumbnails
+            li.span2
+              a(href="http://twitter.com/Mcarthur_Joe")
+                .thumbnail
+                  img(src='/img/joe.jpg')
+                  .caption
+                    h3 Joe
+                    p @Mcarthur_Joe
+            li.span2
+              a(href="http://twitter.com/davidecarroll")
+                .thumbnail
+                  img(src='/img/david.jpg')
+                  .caption
+                    h3 David
+                    p @davidecarroll
+            li.span2
+              a(href="http://twitter.com/nicholascwng")
+                .thumbnail
+                  img(src='https://secure.gravatar.com/avatar/9637895e310caf25237e89155157b2a7?s=200')
+                  .caption
+                    h3 Nick
+                    p @nicholascwng
+            li.span2
+              a(href="http://twitter.com/andylolz")
+                .thumbnail
+                  img(src='https://secure.gravatar.com/avatar/bbb9eb1af3b427f8259df33f6e8844aa?s=200')
+                  .caption
+                    h3 Andy
+                    p @andylolz
+            li.span2
+              a(href="http://twitter.com/frathgeber")
+                .thumbnail
+                  img(src='https://secure.gravatar.com/avatar/d178a6201be696c466c41c355c671707?s=200')
+                  .caption
+                    h3 Florian
+                    p @frathgeber
+            li.span2
+              .thumbnail
+                img(src='/img/elliot.jpg')
+                .caption
+                  h3 Elliot
+
+  script(src='/js/jquery.min.js')
+  script(src='/js/bootstrap.js')
+  script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false')
+  script.
+    var map;
+    var marker;
+
+    function makeInfoWindowEvent(map, infowindow, contentString, marker) {
+      google.maps.event.addListener(marker, 'click', function() {
+        infowindow.setContent(contentString);
+        infowindow.open(map, marker);
+      });
+    }
+    
+    function initialise() {
+      var events = !{events};
+      var mapOptions = {
+        zoom: 2,
+        center: new google.maps.LatLng(0, 0),
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      };
+      map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
+      addMarkers(map, events);
+    }
+    
+    function addMarkers(map, events) {
+      var infowindow = new google.maps.InfoWindow();
+      for (var i = 0; i < events.length; i++) {
+        if(events[i].coords.length !== 0) {
+          var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(events[i].coords.lat, events[i].coords.lng),
+            map: map,
+            icon: 'img/noalogo.png'
+          });
+
+          bubble_content = '<h4>' + events[i].name;
+          if (events[i].profession != '') {
+            bubble_content += ' <em>(' + events[i].profession + ')</em>';
+          }
+          bubble_content += '</h4>';
+          bubble_content += '<p>' + events[i].story + '</p>';
+          bubble_content += '<a target="_blank" href="http://dx.doi.org/' + events[i].doi + '">doi</a>';
+          bubble_content += ' | ';
+          bubble_content += '<a target="_blank" href="' + events[i].url + '">url</a>';
+          bubble_content += ' | ';
+          bubble_content += events[i].calendar_date || '';
+          
+          makeInfoWindowEvent(map, infowindow, bubble_content, marker);
+        }
+      }
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialise);
