--- a/views/sidebar/index.jade
+++ b/views/sidebar/index.jade
@@ -41,6 +41,7 @@ block content
           input#id_doi.input-block-level(readonly='readonly', type='text', name='doi', value='#{vars.doi}')
         else
           input#id_doi.input-block-level(type='text', name='doi', placeholder='e.g. 10.1136/bmj.c7086')
+        p.help-text Document Object Identifier (DOI)
 
     .control-group
       label.control-label(for='id_description') Description
@@ -57,5 +58,6 @@ block content
         button.btn.btn-primary.pull-right Open Access, please!
 
 block scripts
+  script(src='/js/jquery.min.js')
   script(src='/js/add.js')
 
