Change 'about' to 'the team'

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ block body
           li
             a(href='#get-it') Get it!
           li
-            a(href='#about') About
+            a(href='#the-team') The team
       .span10
         section#the-project
           .page-header
@@ -67,12 +67,10 @@ block body
                 i(class='icon-bookmark')
                 |Open Access Button
 
-        section#about
+        section#the-team
           .page-header
-            h1 About
+            h1 The team
           a(href="http://hacks.rewiredstate.org/events/bmj/open-access-button") A BMJ / Rewired State hackday hack
-
-          h2 The team
 
           ul.thumbnails
             li.span2
