Add Joe’s tagline

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,8 @@ block body
   header.jumbotron.subhead
     .container
       h1 Open Access Button
+      .lead Millions of researchers hit journal paywalls every day.
+      .lead Help us tear them down.
 
   // Main body
   .container
@@ -65,7 +67,7 @@ block body
             p Drag this to your bookmark bar: 
               a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ domain }/js/bookmarklet.js');")
                 i(class='icon-bookmark')
-                |Open Access Button
+                |  Open Access Button
 
         section#the-team
           .page-header
