--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ block body
   header.jumbotron.subhead
     .container
       h1 Open Access Button
-      .lead Millions of researchers hit journal paywalls every day.
+      .lead Journal paywalls block millions of researchers every day.
       .lead Help us tear them down.
 
   // Main body
@@ -25,12 +25,13 @@ block body
             h1 The project
           .hero-unit
             p.
-              If we want to bring about a more open community we’ll need more tools, more information and more engagement around the issue.
+              |If we want to bring about a more open community we’ll need more tools,
+              |more information and more engagement around the issue.
 
             p
               strong That’s where our idea comes in. 
-              |Imagine a browser-based tool which allowed you to track every time someone
-              |was denied access to a paper? Better yet, imagine if that tool gave you
+              |Imagine a browser-based tool that allows you to track every time someone
+              |is denied access to a paper? Better yet, imagine if that tool gave you
               |basic information about where in the world they were or their profession
               |and why they were looking. Integrating this into one place would create a
               |realtime, worldwide, interactive picture of the problem. The integration
@@ -45,14 +46,7 @@ block body
               strong Open Access button
               |. Every paywall met is an isolated incident; it’s time we capture those
               |individual moments of injustice and frustration to turn them into positive
-              |change. We’ve figured out how all this and more can be done – If you’re a
-              |programmer, we’d love your help creating a basic prototype to prove this is
-              |a viable idea. After that our dreams include a having a slick website to
-              |provide a home for the button and an accompanying campaign. If you have
-              |anything you feel that can help us and you want to help create change to
-              |move towards a more open world join us by contacting 
-              a(href='mailto:oabutton@gmail.com') oabutton@gmail.com
-              |.
+              |change.
 
         section#map
           .page-header
