Add CC BY notice to footer.
Closes #24

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,6 +42,9 @@ html(lang='en')
     footer
       block footer
         .container
+          p.muted All site content is licensed under a 
+            a(href='http://creativecommons.org/licenses/by/3.0/us/') Creative Commons Attribution License
+            |.
 
     script(src='/js/jquery.min.js')
     script(src='/js/bootstrap.js')
