--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,12 @@ body {
     margin-top: 60px;
 }
 
+footer {
+  height: 60px;
+  background-color: #f5f5f5;
+  padding: 20px 0 0;
+}
+
 #map_canvas {
   height: 700px;
   width: 100%;
