--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,10 +41,11 @@ html(lang='en')
 
     footer
       block footer
-        .container
-          p.muted All site content is licensed under a 
-            a(href='http://creativecommons.org/licenses/by/3.0/us/') Creative Commons Attribution License
-            |.
+        #footer
+          .container
+            p.muted All site content is licensed under a 
+              a(href='http://creativecommons.org/licenses/by/3.0/us/') Creative Commons Attribution License
+              |.
 
     script(src='/js/jquery.min.js')
     script(src='/js/bootstrap.js')
