Look up DOI in PubMed Central

--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -1,6 +1,8 @@
 extends ../layout
 block content
   img(src='/img/oalogo.png', style='position: absolute; top: 0; right: 0;')
+  a#id_pmc(title='Available at PMC', target='_new', style='position: absolute; top: 0; right: 32px; display: none;')
+    img(src='/img/pmc.png')
 
   form#event.form-horizontal(action='/add', method='post')
     input#id_accessed(type='hidden', name='accessed')
