Fix a templating error

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,8 +25,8 @@ block body
             h1 The project
           .hero-unit
             p.
-              |If we want to bring about a more open community we’ll need more tools,
-              |more information and more engagement around the issue.
+              If we want to bring about a more open community we’ll need more tools,
+              more information and more engagement around the issue.
 
             p
               strong That’s where our idea comes in. 
