--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,16 @@ html(lang='en')
     link(rel='stylesheet', href='/css/app.css')
 
   body
+    // google analytics
+    script
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42412544-1', 'herokuapp.com');
+      ga('send', 'pageview');
+
     header
       block header
         .navbar.navbar-inverse.navbar-fixed-top
