Move Google Scholar search after form submission
18a70fecc9 introduces a very neat idea. This is just a cut/paste to move
the functionality until after the form is submitted.

--- a/views/Event/success.jade
+++ b/views/Event/success.jade
@@ -2,6 +2,10 @@ extends ../layout
 block content
   h2 Thanks!
   p Now to find an Open Access version…
+  if scholar_url != ''
+    a#id_scholar(title='Find in Google Scholar', target='_blank', href=scholar_url)
+      img(src='/img/scholar.png')
+      |Search Google Scholar
 
 block header
 
