--- a/views/Event/add_iframe.jade
+++ b/views/Event/add_iframe.jade
@@ -15,8 +15,8 @@ block content
         .controls
           input#id_profession.input-block-level(type='text', name='profession', placeholder='e.g. Doctor', data-remember)
 
-    label.checkbox(for='id_remember') Remember me
-      input#id_remember.input-block-level(type='checkbox', name='remember', checked)
+    label.checkbox(for='id_remember', style='display:none') Remember me
+      input#id_remember.input-block-level(type='checkbox', name='remember')
 
     .control-group
       label.control-label(for='id_location') Location
