Add a new layout for sidebar templates, and rejig

--- a/views/sidebar/index.jade
+++ b/views/sidebar/index.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends layout
 block content
   img(src='/img/oalogo.png', style='position: absolute; top: 0; right: 0;')
 
@@ -47,9 +47,6 @@ block content
       .controls
         button.btn.btn-primary.pull-right Open Access, please!
 
-block header
-
-block footer
-
 block scripts
   script(src='/js/add.js')
+
