--- a/views/sidebar/success.jade
+++ b/views/sidebar/success.jade
@@ -1,4 +1,4 @@
-extends ../layout
+extends layout
 block content
   h2 Thanks!
   p Now to find an Open Access version…
@@ -6,8 +6,4 @@ block content
     a#id_scholar(title='Find in Google Scholar', target='_blank', href=scholar_url)
       img(src='/img/scholar.png')
       |Search Google Scholar
-
-block header
-
-block footer
 
