Reduces whitespace at top of sidebar.
Hopefully fixes #41

--- a/views/sidebar/layout.jade
+++ b/views/sidebar/layout.jade
@@ -13,7 +13,7 @@ html(lang='en')
     link(rel='stylesheet', href='/css/font-awesome.min.css')
     link(rel='stylesheet', href='/css/app.css')
 
-  body
+  body(style="margin-top: 20px")
     // Main body
     .container
       block content
