--- a/views/stories.jade
+++ b/views/stories.jade
@@ -9,4 +9,5 @@ block content
       blockquote #{event.story}
       small
         em= event.accessed.calendar()
-        span: #{event.profession}  from #{event.location}
+        | 
+        span #{event.profession}  from #{event.location}
