Remove rogue colon in stories.jade. Fixes #40.

--- a/views/Event/list.jade
+++ b/views/Event/list.jade
@@ -9,4 +9,5 @@ block content
       blockquote #{event.story}
       small
         em= event.accessed.calendar()
-        span: #{event.profession}  from #{event.location}
+        | 
+        span #{event.profession}  from #{event.location}
