Remove duplicate mention of submitter’s occupation

--- a/views/Event/list.jade
+++ b/views/Event/list.jade
@@ -10,4 +10,4 @@ block content
       small
         em= event.accessed.calendar()
         | 
-        span #{event.profession}  from #{event.location}
+        span from #{event.location}
