basic stories page renders and static content is serving.  yay!

--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/stories.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/stories.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bookmarklet/site/layout.html" %}
 {% block content %}
 <h1>{{count|force_escape}}<small>Scholarly pursuits denied</small></h1>
 {% for event in events %}
