--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/layout.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/layout.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Open Access Button">
     <title>{{'Open Access Button'|force_escape}}{% if  title %}{{ title|force_escape }}{% endif %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/app.css">
   </head>
   <body>
     <!-- google analytics-->
@@ -59,7 +59,7 @@ ga('send', 'pageview');
         </div>
       </div>{% endblock %}
     </footer>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.js"></script>{% block scripts %}{% endblock %}
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.js"></script>{% block scripts %}{% endblock %}
   </body>
 </html>
