moved stories and maps URLs to the top level

--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/about.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/about.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}{% block content %}
+{% extends "bookmarklet/site/layout.html" %}{% block content %}
 <h1>Open Access Button</h1><a href="http://hacks.rewiredstate.org/events/bmj/open-access-button">A BMJ / Rewired State hackday hack</a>
 <h2>The team</h2>
 <ul class="thumbnails">
