--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/layout.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="Open Access Button">
-    <title>{{'Open Access Button'|force_escape}}{% if  title %}{{ title|force_escape }}{% endif %}</title>
+    <title>{{'Open Access Button'|force_escape}}{% if  title %} - {{ title|force_escape }}{% endif %}</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
