--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/map.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/map.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bookmarklet/site/layout.html" %}
 {% block content %}
 <h1>{{count|force_escape}}<small>Scholarly pursuits denied</small></h1>
 <div id="map_canvas"></div>
