added links for homepage, aboutus

--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/index.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/site/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}{% block content %}
+{% extends "bookmarklet/site/layout.html" %}{% block content %}
 <h1>Open Access Button</h1>
 <div class="hero-unit">
   <p>If we want to bring about a more open community we’ll need more tools, more information and more engagement around the issue.
