Use https on live
Refs #25

--- a/views/index.jade
+++ b/views/index.jade
@@ -59,7 +59,7 @@ block body
             h1 Ok Ace! Give me the bookmarklet!
           .hero-unit
             p Drag this to your bookmark bar: 
-              a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://#{ domain }/js/bookmarklet.js');")
+              a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','#{ domain }/js/bookmarklet.js');")
                 i(class='icon-bookmark')
                 |  Open Access Button
 
