--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 block body
+  // Github ribbon
+  a(href='https://github.com/OAButton/server')
+    img#github_ribbon(
+        src='https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png',
+        alt='Fork me on GitHub')
   header.jumbotron.subhead
     .container
       h1 Open Access Button
