Add a section on how to contribute.

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,8 @@ block body
           li
             a(href='#get-it') Get it!
           li
+            a(href='#contribute') Contribute
+          li
             a(href='#the-team') The team
       .span10
         section#the-project
@@ -67,6 +69,21 @@ block body
               a(class="btn btn-large", href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','#{ domain }/js/bookmarklet.js');")
                 i(class='icon-bookmark')
                 |  Open Access Button
+
+        section#contribute
+          .page-header
+            h1 How can I help?
+          .hero-unit
+            p.
+              We’re glad you asked! The Open Access Button has been created entirely by
+              volunteers, and we can always do with some extra help squashing bugs and
+              adding new features.
+
+            p
+              |If you want to help out, 
+              a(href='http://github.com/OAButton/server') check out the source on Github
+              |, and get hacking. There are some instructions there on how to
+              |set up your development server.
 
         section#the-team
           .page-header
