Add links to the instructions doc

--- a/views/index.jade
+++ b/views/index.jade
@@ -82,8 +82,9 @@ block body
             p
               |If you want to help out, 
               a(href='http://github.com/OAButton/server') check out the source on Github
-              |, and get hacking. There are some instructions there on how to
-              |set up your development server.
+              |, and get hacking. There are some instructions there on 
+              a(href='https://github.com/OAButton/server/blob/develop/instructions.md') how to set up your development server
+              |.
 
         section#the-team
           .page-header
