--- a/oabutton/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/oabutton/apps/web/templates/web/layout.jade
@@ -6,7 +6,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='description', content='Open Access Button')
-    if typeof(title) !== 'undefined'
+    if title
       title= 'Open Access Button - ' + title
     else
       title= 'Open Access Button'
