--- a/oabutton/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/oabutton/apps/web/templates/web/index.html
@@ -1,4 +1,4 @@
-{% extends "web/layout.jade" %}{% block body %}
+{% extends "web/layout.html" %}{% block body %}
 <!-- Github ribbon--><a href="https://github.com/OAButton/server"><img id="github_ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"/></a>
 <header class="jumbotron subhead">
   <div class="container">
@@ -65,7 +65,7 @@ change.
           <h1>Ok Ace! Give me the bookmarklet!</h1>
         </div>
         <div class="hero-unit">
-          <p>Drag this to your bookmark bar: <a{% __pyjade_attrs attrs=[('href',("javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','"+ domain +"/js/bookmarklet.js');"))] %} class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+            <p>Drag this to your bookmark bar: <a href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','{{ request.META.HTTP_HOST }}/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
